/*
 *  UCF COP3330 Fall 2021 Assignment 3 Solution
 *  Copyright 2021 Brooks McKinley
 */

package ex44;

public class ExerciseConstants {
    static final String INPUT_FILENAME = "exercise44_input.json";
}
