/*
 *  UCF COP3330 Fall 2021 Assignment 3 Solution
 *  Copyright 2021 Brooks McKinley
 */

package ex44;

public class ExerciseInput {
    private Product[] products;
    public ExerciseInput() {}

    public Product[] getProducts() {
        return products;
    }
}
